--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,7 +29,7 @@
     }
 
     .small-text {
-        @apply flex gap-2 text-sm font-medium text-primary;
+        @apply flex gap-2 text-sm font-medium text-secondary-high;
     }
 
     .paragraph-text {
@@ -147,6 +147,6 @@
     }
 
     .searchbar-btn {
-        @apply bg-gray-900 border border-gray-900 rounded-lg shadow-xs px-5 py-3 text-white text-base font-semibold hover:opacity-90 disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-40;
+        @apply bg-secondary-button rounded-lg shadow-xs px-5 py-3 text-secondary text-base font-semibold hover:scale-110 transition-all ease-in-out disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-40;
     }
 }
