--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -66,7 +66,7 @@
     }
 
     .product-image {
-        @apply flex-grow xl:max-w-[50%] max-w-full py-16 border border-[#CDDBFF] rounded-[17px];
+        @apply flex-grow xl:max-w-[50%] max-w-full;
     }
 
     .product-info {
@@ -74,7 +74,7 @@
     }
 
     .product-hearts {
-        @apply flex items-center gap-2 px-3 py-2 bg-[#FFF0F0] rounded-10;
+        @apply flex items-center gap-2 px-3 py-2 bg-yellow-100 rounded-10;
     }
 
     .product-stars {
