--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,7 +17,7 @@
 
 @layer utilities {
     .btn {
-        @apply py-4 px-4 bg-secondary hover:bg-opacity-70 rounded-[30px] text-white text-lg font-semibold;
+        @apply py-4 px-4 bg-secondary-button hover:bg-opacity-70 transition-all ease-in-out rounded-[30px] text-secondary text-lg font-semibold;
     }
 
     .head-text {
@@ -70,7 +70,7 @@
     }
 
     .product-info {
-        @apply flex items-center flex-wrap gap-10 py-6 border-y border-y-[#E4E4E4];
+        @apply flex items-center justify-between flex-wrap gap-10 py-6 border-y border-y-[#E4E4E4];
     }
 
     .product-hearts {
@@ -121,7 +121,7 @@
 
     /* PRICE INFO */
     .price-info_card {
-        @apply flex-1 min-w-[200px] flex flex-col gap-2 border-l-[3px] rounded-10 bg-white-100 px-5 py-4;
+        @apply flex-1 min-w-[200px] flex flex-col gap-2 border-l-[3px] rounded-10 bg-gray-200 px-5 py-4;
     }
 
     /* PRODUCT CARD */
