--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -124,7 +124,7 @@
 
     /* Navbar Styles */
     .nav {
-        @apply flex justify-between items-center px-6 md:px-20 py-4;
+        @apply flex justify-center items-center px-6 md:px-20 py-4;
     }
 
     .nav-logo {
@@ -160,24 +160,5 @@
 
     .searchbar-btn {
         @apply bg-secondary-button rounded-lg shadow-xs px-5 py-3 text-secondary text-base font-semibold hover:scale-110 transition-all ease-in-out disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-40;
-    }
-
-    /* Spinner */
-    .spinner {
-        border: 4px solid #f3f3f3;
-        border-top: 4px solid #3498db;
-        border-radius: 50%;
-        width: 40px;
-        height: 40px;
-        animation: spin 2s linear infinite;
-    }
-
-    @keyframes spin {
-        0% {
-            transform: rotate(0deg);
-        }
-        100% {
-            transform: rotate(360deg);
-        }
     }
 }
